...
    "calendar_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kalendář"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Calendar"
...
    "people_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lidé"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "People"
...
    "settings_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nastavení"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
...
    "tab_today" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dnes"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Today"
...
    "today_contacts_section" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Svátky vašich lidí"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your people's name days"
...
